--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
 
 <body>
 
-    <div class="container">
-        <form>
+    <div class="container my-3">
+        <h2> Add a todo</h2>
+        <form action='/ method="Post">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
