--- a/templates/index.html
+++ b/templates/index.html
@@ -19,18 +19,15 @@
         <h2> Add a todo</h2>
         <form action='/ method="Post">
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label for="title" class="form-label">Todo Title</label>
+              <input type="email" class="form-control" name="title" id="title" aria-describedby="emailHelp">
+              
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <label for="desc" class="form-label">TODO Description</label>
+              <input type="text" class="form-control" name="desc" id="desc">
             </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
+            
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
 
@@ -46,8 +43,13 @@
               </tr>
             </thead>
             <tbody>
-                {% for todo in  %}
-                    
+                {% for todo in all Todo  %}
+                  <tr>
+                  <th> scope ="row">{{loop.index}}</th>
+                  <th>{{todo.title}}</th>
+                  <th>{{todo.desc}} </th>
+                  <th>{{todo.date_created </th>
+                   </tr>  
                 {% endfor %}
     
               <tr>
