--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
               <input type="text" class="form-control" name="desc" id="desc">
             </div>
             
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-outline-dark">Submit</button>
           </form>
 
     </div>
@@ -46,24 +46,29 @@
                 <th scope="col">Title</th>
                 <th scope="col">Description</th>
                 <th scope="col">Time</th>
+                <th scope="col">Actions</th>
+                      
               </tr>
             </thead>
             <tbody>
                 {% for todo in allTodo  %}
                   <tr>
-                  <th> scope ="row">{{loop.index}}</th>
-                  <th>{{todo.title}}</th>
-                  <th>{{todo.desc}} </th>
-                  <th>{{todo.date_created </th>
-                   </tr>  
+                      <th> scope ="row">{{loop.index}}</th>
+                      <td>{{todo.title}}</td>
+                      <td>{{todo.desc}} </td>
+                      <td>{{todo.date_created </td>
+                      <td>
+                         <a href="/update/{{todo.sno}} type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+           
+                         <a href="/delete/{{todo.sno}} type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                      </td>
+                      
+                      
+                  
+                  </tr>  
                 {% endfor %}
     
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
+              
               
             </tbody>
           </table>
